# slipperygg-old

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  library.h  main.cpp  motd.txt  pch.h  slipperygg.sln  slipperygg.vcxproj  slipperygg.vcxproj.filters
.github/workflows/: iwyu.yml  windows.yml
CSGOSimple/: CSGOSimple.vcxproj  hooks.cpp  main.cpp  menu.cpp  menu.hpp  options.hpp  render.cpp
CSGOSimple/features/: backtrack.cpp  backtrack.hpp  visuals.cpp
CSGOSimple/fonts/: fonts.hpp  helvetica.hpp  helvetica2.hpp
CSGOSimple/helpers/: Helpers.cpp  Helpers.h  Memory.cpp  Memory.h
CSGOSimple/imgui/: imgui_draw.cpp  imgui_stdlib.h
CSGOSimple/valve_sdk/interfaces/: IClientMode.hpp
CSGOSimple/valve_sdk/misc/: WeaponId.h
Osiris/: Osiris.vcxproj
Osiris/Hacks/: Misc.cpp  Misc.h
cheats/: menu.h
cheats/fakewalk/: slowwalk.h
cheats/lagcompensation/: animation_system.h  local_animations.h
cheats/legitbot/: legitbot.h
cheats/misc/: airstrafe.h  bunnyhop.h  fakelag.h  key_binds.cpp  logs.h  misc.h  prediction_system.h  spammers.h
cheats/ragebot/: antiaim.h  knifebot.h  zeusbot.h
cheats/visuals/: GrenadePrediction.h  bullet_tracers.h  dormant_esp.h  nightmode.h  other_esp.h  player_esp.h  radar.h  world_esp.h
configs/: configs.cpp
hooks/: hooks.hpp
lib/: CMakeLists.txt  addressreturnspoof.h  stb_image.h
lib/dxsdk/: CMakeLists.txt
lib/freetype/: CMakeLists.txt
lib/freetype/src/base/: ftbase.h  ftbbox.c  ftbdf.c  ftcalc.c  ftcid.c  ftmac.c  ftmm.c  ftpfr.c  md5.c
lib/freetype/src/cff/: cffcmap.c  cffcmap.h  cffdrivr.c  cffdrivr.h  cfferrs.h  cffgload.c  cffgload.h  cffload.c  cffload.h  cffobjs.c  cffobjs.h  cffparse.c  cffparse.h  cfftoken.h
lib/imgui/: CMakeLists.txt  codeeditor.cpp  imgui.h  imgui_impl_dx9.cpp  imgui_impl_win32.cpp  imgui_widgets.cpp
lib/minhook/: CMakeLists.txt
lib/sdk/: CMakeLists.txt  EconItemView.cpp  Entity.cpp  Entity.h  ItemSchema.h  KeyValues.cpp  PlayerResource.h  Utils.cpp  Vector.h  VirtualMethod.h
lua/: Clua.cpp
sdk/: structs.hpp
sdk/misc/: Convar.cpp  EHandle.hpp  KeyValues.hpp
slipperygg/: Config.cpp  Config.h  GUI.cpp  GUI.h  Interfaces.h  Memory.cpp  slipperygg.vcxproj  slipperygg.vcxproj.filters
slipperygg/Hacks/: Aimbot.cpp  Backtrack.cpp  Chams.cpp  Glow.cpp  Misc.cpp  Misc.h  Sound.cpp  StreamProofESP.cpp  Visuals.cpp  Visuals.h
slipperygg/InventoryChanger/: InventoryChanger.cpp
slipperygg/SDK/: ConVar.h  Input.h  Platform.h
slipperygg/imgui/: imgui_draw.cpp  imgui_widgets.cpp
slipperygg/imgui - Copy/: imgui_draw.cpp  imgui_widgets.cpp
src/: CMakeLists.txt  base.cpp
src/engine/: engineprediction.cpp  engineprediction.h
src/features/: CMakeLists.txt
src/features/config/: CMakeLists.txt  config.cpp  config.h  configstructs.cpp  configstructs.h
src/features/inventory/: CMakeLists.txt  inventory.cpp  inventorychanger.cpp  inventorychanger.h  inventoryconfig.cpp  inventoryconfig.h  itemgenerator.cpp  staticdata.cpp  tooluser.cpp  tournamentmatches.h
src/features/inventory/gameitems/: storage.h  structs.h
src/features/inventory/inventory/: CMakeLists.txt  item.h  structsfromjson.cpp  structsfromjson.h
src/features/legitbot/: CMakeLists.txt  aimbot.cpp  aimbot.h  backtrack.cpp  backtrack.h  triggerbot.cpp  triggerbot.h
src/features/other/: CMakeLists.txt  misc.cpp  misc.h  sound.cpp  sound.h
src/features/rage/: CMakeLists.txt  antiaim.cpp  antiaim.h
src/features/visuals/: CMakeLists.txt  antiobs.cpp  antiobs.h  chams.cpp  chams.h  glow.cpp  glow.h  visuals.cpp  visuals.h
src/gui/: CMakeLists.txt  custom.cpp  custom.h  gui.cpp  gui.h
src/hooking/: CMakeLists.txt  hooking.cpp  hooking.h  minhook.cpp  minhook.h  vmtswap.cpp  vmtswap.h
src/nSkinz/: SkinChanger.cpp  SkinChanger.h
src/nSkinz/Utilities/: Platform.cpp  vmt_smart_hook.hpp
src/pch/: pch.h
src/protobuf/: protobufreader.h
src/utils/: CMakeLists.txt  antidebug.h  cryptstr.h  csgo.cpp  csgo.hpp  ctx.hpp  draw_manager.cpp  draw_manager.h  eventlistener.cpp  eventlistener.h  fnv.h  gamedata.cpp  gamedata.h  helpers.cpp  helpers.h  imports.h  inpututil.cpp  inpututil.h  interfaces.h  json.hpp  math.hpp  memory.cpp  memory.h  netmanager.cpp  netmanager.hpp  netvars.cpp  netvars.h  recv.cpp  stringpool.h  texture.cpp  texture.h  util.cpp  util.hpp
